# distributed-process-system

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.es.md  README.md  generate_modular_system.sh  master_setup.sh
config/: basic_pipeline.txt  deployment.conf
docs/: ARCHITECTURE.md  README.md
include/: configuration.h  distributed_node.h  distributed_system.h  interfaces.h  ipc.h  isolated_process.h  memory_pool.h  plugin_manager.h  serialization.h  supervisor.h  types.h
plugins/: Makefile  aggregation_plugin.cpp  audit_plugin.cpp  encryption_plugin.cpp  enrichment_plugin.cpp  validation_plugin.cpp
scripts/deploy/: deploy.sh  package.sh
src/: configuration.cpp  distributed_node.cpp  distributed_system.cpp  ipc.cpp  isolated_process.cpp  main.cpp  memory_pool.cpp  plugin_manager.cpp  serialization.cpp  supervisor.cpp  types.cpp
tests/: Makefile  test_all.cpp  test_configuration.cpp  test_memory_pool.cpp  test_serialization.cpp
tools/: analyze_dependencies.sh
tools/debugging/: distributed_debugger.sh  memory_profiler.sh
